forth/test/fail/test_cond_arity_elifz_mismatch.af
use' ../../lang.af

fun: test_cond_arity_elifz_mismatch_fail { -- out }
  if false then 10 elifz false then 20 30 else 40 end
end
